--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = ">=3.12,<3.13"
 ifcopenshell = "0.8.2"
 pytest = "==8.3.5"
+poetry-core = "^2.1.3"
+fastapi = "^0.115.12"
 
 
 [build-system]
